# ai_projects

./: .gitignore  GRAPH_RAG_Tutorial.md  README.md
agylity/: .env.example  (+8 more)
ai_commerce_agent_ucp/: .env.example  IMPROVEMENT_PLAN.md  README.md  __init__.py  agent_api.py  config.py  pyproject.toml  requirements.txt
ai_commerce_agent_ucp/agent/: __init__.py  graph.py  rag.py  ucp_client.py
ai_commerce_agent_ucp/data/: products.json
ai_commerce_agent_ucp/merchant_server/: __init__.py  models.py  server.py  startup.py
ai_commerce_agent_ucp/scripts/: install.sh  run_backend.sh  run_frontend.sh  test_backend.sh  test_frontend.sh
ai_commerce_agent_ucp/tests/: test_agent_api.py  test_agent_graph.py  test_merchant_server.py  test_models.py  test_rag.py
ai_commerce_agent_ucp/ui/templates/: index.html
bioinfo-code-mcp/: .gitignore  .mcp.json  LICENSE  QUICKSTART.md  README.md  pyproject.toml  requirements.txt  run.sh  setup.sh
bioinfo-code-mcp/.github/workflows/: ci.yml
bioinfo-code-mcp/examples/: agent_demo.py  protein_lookup.py  sequence_analysis.py
bioinfo-code-mcp/playground/: app.py
bioinfo-code-mcp/playground/templates/: index.html
bioinfo-code-mcp/src/bioinfo_code_mcp/: __init__.py  config.py  registry.py  sandbox.py  server.py
bioinfo-code-mcp/tests/: test_apis.py  test_format_utils.py  test_playground.py  test_registry.py  test_sandbox.py  test_sequence_utils.py
celltype-research-workbench/: .env.example  .gitignore  README.md  app.py  pyproject.toml  requirements.txt  run.sh  setup.sh
celltype-research-workbench/.streamlit/: config.toml
celltype-research-workbench/components/: agent_chat.py  dashboard.py  data_explorer.py  data_management.py  design_system.py  help_page.py  quick_start.py  reports.py  settings.py  sidebar.py
celltype-research-workbench/utils/: celltype_agent.py  config.py  examples.py  sample_data.py  state.py
celltype-research-workbench/workflows/: combination_strategy.py  literature_synthesis.py  molecular_design.py  resistance_biomarkers.py  target_prioritization.py
code_eval_workbench/: .env.example  .gitignore  CLAUDE.md  LICENSE  QUICKSTART.md  README.md  app.py  dataset.py  pyproject.toml  requirements.txt  run.sh  run_eval.py  scorer.py  setup.sh  task.py  utils.py  verify.sh
code_eval_workbench/.github/workflows/: evals.yml
code_eval_workbench/tests/: conftest.py  test_dataset.py  test_scorer.py  test_utils.py
energize/backend/: .env.example  Dockerfile  pyproject.toml
energize/backend/app/: __init__.py  config.py  database.py  main.py
energize/backend/scripts/: init_db.sql
energize/dashboard/: Dockerfile  app.py  pyproject.toml
md_a2a/: .env.example  .gitignore  ANALYTICS_CHART_FIX.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_README.md  README.md  TESTING_SUMMARY.md  __init__.py  api_test_suite.py  assess.html  base.html  cases.html  commit_github.sh  create_github_package.sh  dashboard.html  database.py  demo.py  deploy_setup.sh  env.example  main.py  models.py  patients.html  pyproject.toml  requirements.txt  test_full_workflow.py  test_live_server.py
md_a2a/docs/: ITERATION_PLAN.md  PRD.md  TECH_SPEC.md
md_a2a/md_a2a/: AI_INSIGHTS_IMPROVEMENT.md  ASSESSMENT_BUTTON_FIX.md  test_web_interface.py
md_a2a/md_a2a/docs/: AI_PROMPT_IMPROVEMENTS.md  BRD.md  USER_WORKFLOW.md
md_a2a/md_a2a/src/: agents.py  config.py  models.py
md_a2a/md_a2a/templates/: analytics.html  cases.html  dosage.html  photos.html
md_a2a/md_a2a/tests/: conftest.py
md_a2a/routers/: __init__.py  analytics.py  cases.py  patients.py
md_a2a/src/: database.py  main.py
md_a2a/static/: test.html  test_insights.html
md_a2a/templates/: assess.html  base.html  dashboard.html
md_a2a/tests/: __init__.py  test_agents.py  test_cases.py  test_health.py
md_a2a_v2/: .env.example  .gitignore  CLAUDE.md  README.md  app.py  bertelsmann-langgraph-a2a-tutorial.md  graph.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  streamlit_app.py
md_a2a_v2/agents/: broadcasting.py  news.py  publishing.py  tools.py
md_a2a_v2/server/: main.py
md_a2a_v2/tests/: conftest.py  test_api.py  test_api_mock.py  test_integration.py
pagerduty-ai-agent/: .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  README.md  app.py  pyproject.toml  requirements.txt
pagerduty-ai-agent/docs/: API.md
pagerduty-ai-agent/scripts/: init_database.py
pagerduty-ai-agent/src/: __init__.py
pagerduty-ai-agent/src/agents/: __init__.py  workflow.py
pagerduty-ai-agent/src/data/: __init__.py  database.py  models.py
pagerduty-ai-agent/src/tools/: __init__.py  analytics_tools.py  database_tools.py
pagerduty-ai-agent/src/utils/: __init__.py  config.py  logging_config.py
pagerduty-ai-agent/tests/: test_pagerduty_agent.py
qcli/: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
qcli/.github/: pull_request_template.md
qcli/examples/: demo_session.txt
qcli/notebooks/: qwen3_5_capabilities.ipynb
qcli/qcli/: __main__.py  cli.py  engine.py  session.py
qcli/scripts/: run_real_model_test.sh  test_qwen_capabilities.py
qcli/tests/: test_cli.py  test_cli_interactive.py  test_session.py
tutorials/gemini351fllite/: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  run_app.sh  run_cli.sh  run_medical.sh  setup.sh
tutorials/gpt55-notebook-tutorial/: .env.example  .gitignore  CLAUDE.md  QUICKSTART.md  README.md  cli.py  gpt55_agent_framework.py  gpt55_improvements_documented_python_notebook_tutorial.ipynb  pyproject.toml  run.sh  settings.json.bkp  setup.sh
tutorials/microgpt/: .gitignore  CLAUDE.md  QUICKSTART.md  README.md  TUTORIAL_SUMMARY.md  _run_notebook.py  main.py  microgpt_pytorch.py  microgpt_simple.py  microgpt_tutorial.ipynb  pyproject.toml  test_microgpt.py  test_microgpt_pytorch.py
tutorials/multiagent_langraph/: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  multiagent_langgraph.md  pyproject.toml  requirements-dev.txt  requirements.txt
tutorials/nanbeige-ai-tutorial/: README.md  app.py  nanbeige_tutorial.ipynb  pyproject.toml
(+1106 files in other folders)
