[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bioinfo-code-mcp"
version = "0.1.0"
description = "A Code Mode MCP server for bioinformatics — exposes search + execute tools for AI agents to dynamically discover and run Python code against bioinformatics APIs (NCBI, UniProt, PDB, Ensembl, BLAST)"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Bioinformatics Code MCP Contributors" },
]
keywords = [
    "mcp",
    "bioinformatics",
    "ai-agents",
    "code-mode",
    "ncbi",
    "uniprot",
    "pdb",
    "ensembl",
    "blast",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
    "biopython>=1.84",
    "pydantic>=2.0",
    "restrictedpython>=7.0",
]

[project.optional-dependencies]
playground = [
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "jinja2>=3.1.0",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "ruff>=0.8.0",
    "mypy>=1.13",
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "jinja2>=3.1.0",
]

[project.scripts]
bioinfo-mcp = "bioinfo_code_mcp.server:main"
bioinfo-playground = "playground.app:main"

[project.urls]
Homepage = "https://github.com/smkalle/ai_projects/tree/main/bioinfo-code-mcp"
Repository = "https://github.com/smkalle/ai_projects"
Issues = "https://github.com/smkalle/ai_projects/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/bioinfo_code_mcp"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
