[project]
name = "code-eval-workbench"
version = "0.1.0"
description = "Production-grade LLM eval harness for code bug-fixing agents"
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.40.0",
    "python-dotenv>=1.0.0",
    "streamlit>=1.28.0",
    "rich>=13.0.0",
    "pandas>=2.0.0",
    "plotly>=5.0.0",
    "pytest>=7.4.0",
    "pydantic>=2.0.0",
]
