[project]
name = "gpt55-notebook-tutorial"
version = "0.1.0"
description = "Documented Jupyter notebook tutorial for GPT-5.5 improvements, agent architecture mapping, and deployment safety controls."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "AI Tutorial Team" }
]
dependencies = [
  "jupyter>=1.1.1",
  "nbconvert>=7.16.6",
  "notebook>=7.4.0",
  "pandas>=2.2.3",
  "nbformat>=5.10.4",
  "ipykernel>=6.29.5",
  "typer>=0.15.0",
  "rich>=13.9.0",
  "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
pipeline = [
  "papermill>=2.6.0",
]

[tool.uv]
package = false

[tool.uv.pip]
strict = true
